Content update from client 12-04-21

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -82,7 +82,10 @@
                 <img src="assets/icons/immigration.png" alt="">
                 <h1>Immigration</h1>
                 <p>
-                    Our Immigration Solicitors are a team of award winning, specialist solicitors, highly experienced in all areas of immigration law. As a fully qualified and accredited law firm, delivering a global service, we will fully represent your case in close partnership with you.
+                    We offer specialist advice in a wide range of Immigration Services to individuals and families wish to enter the UK, extend their stay and wish to settle in the UK. Our extensive experience in the UK Immigration law means that we can tailor our advice to the needs of any client looking to visit and/ or settle in the UK. We also deal with European EEA or EU matters.
+                </p>
+                <p>
+                    Our fees: we operate on a agreed fixed fee basis and always keep our costs reasonable.
                 </p>
             </div>
             <div class="service">
@@ -90,16 +93,18 @@
                 <img src="assets/icons/family.png" alt="">
                 <h1>Family/Divorce</h1>
                 <p>
-                    When a relationship breaks down, emotions can run high and disputes often spiral out of control. When you need to move forward, we’re here to help. We’re one of the UK’s biggest and most experienced family law teams, and can advise on issues affecting every kind of family – including divorce, matters involving children and wealth protection.
+                    Graceland Solicitors has a broad range of experience and handles all aspects of family law. Key specialisms include: representing the parents in Care proceedings, the victims of domestic violence and assisting clients with securing a financial settlement following the breakdown of a marriage. The team also handles matters such as divorce, Special Guardianship Orders, Child Abduction, Children custody/ contact /   Child  Arrangement Orders   and prohibited  steps  orders. 
                 </p>
+                <!-- <p>
+                    We also advise and represent at court parents who wish to oppose  and challenge  adoptions or  who wish  to  discharge care orders in relation to children who are currently in long term foster care. We have Legal Aid Franchise in Family matter. You may be eligible for Public Fund.
+                </p> -->
             </div>
             <div class="service">
                 <!-- <mat-icon>people</mat-icon> -->
                 <img src="assets/icons/cuff.png" alt="">
                 <h1>Crime</h1>
                 <p>
-                    We are one of the top law firm that provides a premium service for senior professionals, high net worth individuals and their families.  
-                    We assist clients and get fair results from Arrest, Police Station, and through the courts system.
+                    Our crime team is available 24 hours a day, 365 days a year to represent clients at Police station, Magistrate Court, Crown Court, at appeal court, Confiscation / POCA Team and Extradition. Our dedicated defence criminal team is available to listen to you, treat you as an individual and offer honest and straightforward advice. 
                 </p>
             </div>
         </div>
@@ -122,14 +127,18 @@
                     <img src="assets/images/apartment.jpg" alt="">
                     <h1>Housing</h1>
                     <p>
-                        Moving home is exciting, but it can be stressful. That's why at Graceland Solicitors we work hard to ensure that the legal side of your home move is smooth and stress-free.
+                        Our housing department covers a wide range of housing matters, we advise and assist tenants and landlords, we deal with unlawful eviction and possession claims, homelessness appeals, disrepair, neighbourhood disputes against local authority, landlord & tenant matters and judicial reviews.
+                        We regularly represent clients in the courts ensuring our client receive the highest quality assistance throughout their case. We have Legal Aid Franchise in Housing matter. You may be eligible for Public Fund.
+                        
                     </p>
                 </div>
                 <div class="service2">
                     <img src="assets/images/job-center-service.png" alt="">
-                    <h1>Benefit</h1>
+                    <h1>Welfare</h1>
                     <p>
-                        Graceland Solicitors has a long and proud background of social justice, protecting and exercising the rights of the unemployed, the disabled, those on low incomes or those who can no longer work due to illness or injury.
+                        Our dedicated welfare solicitor’s team assist you with reviews, Appeals and dispute against incorrect decisions. 
+                        We are also able to provide professional advice and representation if you have been accused of benefit Fraud and overpayments.
+                        
                     </p>
                     
                 </div>
@@ -139,7 +148,12 @@
                     <img src="assets/images/driving-service.png" alt="">
                     <h1>Traffic Offence</h1>
                     <p>
-                       Many people tend to represent themselves in their traffic legal matter. You may not know your rights and the legal language of the court system. If you are facing a substantial fine, increased insurance premiums, or the possibility of losing your driving privileges you should consider contacting an our lawyers for a consultation regarding your case.
+                        We have highly experienced road traffic solicitors to defend motoring prosecutions.
+                        If you have been involved in a motoring offence or have been served a Notice of Intended Prosecution , then get help and legal advice from our team of specialists.
+                        
+                    </p>
+                    <p>
+                        We operate on an agreed fixed fee basis and always keep our costs reasonable. You may also be eligible for Public Fund.
                     </p>
                     
                 </div>
@@ -147,7 +161,11 @@
                     <img src="assets/images/employ-service.png" alt="">
                     <h1>Employment</h1>
                     <p>
-                        Whether you’re having a few problems at work and want some advice, feel that you’ve been treated unfairly, are facing changes to your working conditions or are facing the end of your employment – we’re here for you.
+                        Our employment department has considerable expertise in professional Disciplinary Proceedings, Discrimination and Race, Sex and Equality Acts, Negotiating severance arrangements, compromise or settlement agreements, redundancy and unfair dismissal.
+                        Our fees: we operate a transparent fee structure and can offer a range of competitively priced funding to meet your specific requirements. Our arrangements ensure that you are made aware of our fees from the outset.
+                        Generally, we will provide you with a free initial telephone consultation to find out whether we can meet your needs and to discuss funding options available to you.
+                        The arrangements we offer are: fee agreement hourly rate retainer / Agreed fixed fee arrangement
+
                     </p>
                     
                 </div>
@@ -196,7 +214,7 @@
             <h1>Our Culture</h1>
             <mat-divider></mat-divider>
             <p>
-                We understand that we are part of key moments in your life, whether these are connected to a company acquisition or sale, a change in your relationships, a marriage or divorce, Immigration issues, your expansion into a new area, or the purchase of a new home.
+                <strong>GRACELAND SOLICITORS</strong> is one of the well-respected high street law firms based in South East of London with wealth of experience specialising in Immigration, criminal law, Family, Housing & Employment law. We represent clients not only in London, South East of England, United Kingdom but beyond with the assistance of dedicated team of defence Lawyers and Solicitors. Our aim is to provide the best possible advice and representation to our clients and the general public who are in desperate need of our quality and client-friendly advice and assistance.
             </p>
             <button matTooltip="Click To View Our Team" matTooltipPosition="above" mat-stroked-button (click)="seeMore('team')">Meet Our Team</button>
             <div class="principal-position">
