--- a/src/app/terms-condition/terms-condition.component.html
+++ b/src/app/terms-condition/terms-condition.component.html
@@ -45,6 +45,28 @@
                         No director of this practice will be required to do anything which may amount to a breach of the Law Society’s Practice or Account Rules or those of the SRA.
                     </li>
                 </ol>
+                <table>
+                    <thead>
+                        <tr>
+                            <td>Work Type</td>
+                            <td>Supervisor</td>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Family and Immigration</td>
+                            <td>Adolph Okoro, Solicitor</td>
+                        </tr>
+                        <tr>
+                            <td>Crime</td>
+                            <td>Sholape Alli, Solicitor</td>
+                        </tr>
+                        <tr>
+                            <td>Housing</td>
+                            <td>Fola Ajala, Solicitor</td>
+                        </tr>
+                    </tbody>
+                </table>
             </li>
             <li>
                 <h1>APPOINTMENTS</h1>
@@ -359,7 +381,7 @@
                 <h1>DATA PROTECTION</h1>
                 <ol type="a">
                     <li>
-                        All information that we hold concerning you as an individual will be held and processed by the firm subject to your instructions, in accordance with the provisions of the Data Protection Act 1998 and our duty of confidentiality. Such personal data will be primarily used by the firm for the provision of legal services to you and for related purposes including
+                        All information that we hold concerning you as an individual will be held and processed by the firm subject to your instructions, in accordance with the provisions of the Data Protection Act 2018 and our duty of confidentiality. Such personal data will be primarily used by the firm for the provision of legal services to you and for related purposes including
                         <ul>
                             <li>Updating and enhancing client records</li>
                             <li>Analysis to help us manage our practice</li>
@@ -380,7 +402,7 @@
                         </ul>
                     </li>
                     <li>
-                        As an individual, you have a right under the Data Protection Act 1998 to obtain information from us, including a description of the data that we hold on you. Should you have any queries concerning this right, please contact our Data Protection Officer, Adolph Okoro.
+                        As an individual, you have a right under the Data Protection Act 2018 to obtain information from us, including a description of the data that we hold on you. Should you have any queries concerning this right, please contact our Data Protection Officer, Adolph Okoro.
                     </li>
                     <li>A copy of our firm’s Data Protection Polity is available on request.</li>
                 </ol>
@@ -455,18 +477,43 @@
                         All solicitors must attempt to resolve problems that may arise with their services. It is therefore important that you immediately raise any concerns you may have with us. We value you and would not wish to think you have reason to be unhappy with us.
                     </li>
                     <li>
-                        We are committed to and confident of providing a high quality service in all respects. If, however, you have any queries or concerns about our work for you or about our bill, please raise them in the first instance with fee earner who is dealing with your matter by telephone, fax or post. We have a procedure in place which details how we handle complaints which could be obtained by contacting Olabanji Ogundero who is this firm’s client care compliant officer. We have eight weeks to consider your complaint. 
+                        We are committed to and confident of providing a high quality service in all respects. If, however, you have any queries or concerns about our work for you or about our bill, please raise them in the first instance with fee earner who is dealing with your matter by telephone, fax or post. We have a procedure in place which details how we handle complaints which could be obtained by contacting Adolph Okoro who is this firm’s client care compliant officer. We have eight weeks to consider your complaint. 
                     </li>
                     <li>
-                        If we have not resolved it within this time you may complain to the Legal Ombudsman. If you are not satisfied with our handling of your complaint you can ask the Legal Ombudsman at PO Box 6806Wolverhampton WV1 9WJ, by telephone No. 0300 555 0333 or by email: enquiries@legalombudsman.org.uk  to consider the complaint. The Legal Ombudsman’s website is at: www.legalombudsman.org.uk. 
-Normally, you will need to bring a complaint to the Legal Ombudsman on the expiry            of 8 weeks of you brining your complaint to us or within six months of receiving a final written response from us about your complaint. However, there are also exceptions when you can bring your complain earlier or later to the Legal Ombudsman which are detailed on the Legal Ombudsman website.
-
+                        Graceland Solicitors is committed to high quality legal advice and client care. If you are unhappy
+                        about any aspect of the service you receive, or about the bill, please contact the person dealing with
+                        your case in the first instance. If after discussing the matter with the case worker, the difficulty
+                        remains unsolved, you should write to our Client Care Supervisor, Mr. Adolph Okoro who can be
+                        contacted at the above mentioned address. We aim to resolve your complaint within eight weeks of
+                        your notification. If you are not satisfied with our handling of your complaint you can ask the Legal
+                        Ombudsman (LeO) at PO Box 6806, WolverhamptonWV1 9WJabout your complaint. You can also e-
+                        mail the Legal Ombudsman (LeO) at enquiries@legalombudsman.org.uk or telephone them on 0300
+                        555 0333 or +44 121 245 3050 if calling from overseas to consider the complaint. Please note that it
+                        is not everybody that is eligible to make complaint through Legal Ombudsman, however individuals
+                        are eligible. For further information, please access the Legal Ombudsman (LeO)’s website:
+                        www.legalombudsman.org.uk. Any complaint to the Legal Ombudsman (LeO) must usually be made
+                        within six months of the date of our final decision on your complaint. You may obtain a copy of our
+                        firm’s Complaints Procedure from our office.
                     </li>
                     <li>
-                        If your complaint is about your bill, you can apply for an assessment of the bill under Part III of the Solicitors Act 1974. The Legal Ombudsman cannot consider a complaint about the bill if you have applied to the Court for assessment of the bill. We may be able to charge interest on all or part of an unpaid bill.
+                        The Legal Ombudsman cannot accept a complaint if more than six years have passed since the act
+                        or omission complained of, or (if the act/omission is more than six years’ old) more than three years
+                        have passed from when you should reasonably have known that there were grounds for complaint. In
+                        neither case can the relevant date be before 6 October 2010.
                     </li>
                     <li>
-                        Any concerns about our commitment to equality and diversity will be dealt with in line with our Equality and Diversity Policy, a copy of which is available on request.
+                        If you have any concerns about our conduct, ethics or behaviour you can complain to the Solicitors
+                        Regulation Authority. www.sra.org.uk
+                    </li>
+                    <li>
+                        If your complaint is about your bill, you can apply for an assessment of the bill under Part III of
+                        the Solicitors Act 1974. The Legal Ombudsman cannot consider a complaint about the bill if
+                        you have applied to the Court for assessment of the bill. We may be able to charge interest on
+                        all or part of an unpaid bill.
+                    </li>
+                    <li>
+                        Any concerns about our commitment to equality and diversity will be dealt with in line with our
+                        Equality and Diversity Policy, a copy of which is available on request.
                     </li>
                 </ol>
             </li>
