--- a/src/app/terms-condition/terms-condition.component.scss
+++ b/src/app/terms-condition/terms-condition.component.scss
@@ -3,6 +3,28 @@
     from{opacity: 0}
     to{opacity: 1}
 }
+table{
+    padding: 20px 50px;
+    width: 100%;
+    thead{
+        background-color: #034060;
+        color: #ffffff;
+        td{
+            padding-left: 10px;
+            height: 40px;
+            font-weight: 400;
+        }
+    }
+    tbody{
+        tr{
+            td{
+                padding: 0px 10px;
+                height: 40px;
+            }
+            background-color: #f5f5f5;
+        }
+    }
+}
 .terms-condition{
     width: 100%;
     @import '../scss-var/terms';
