--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -182,20 +182,21 @@
             <img src="assets/images/family-logo.GIF" alt="">
         </div>
         <div class="logos">
+          <img src="assets/images/cds.gif" alt="">
+      </div>
+        <div class="logos">
             <img src="assets/images/lexcel-logo.png" alt="">
         </div>
-        <div class="logos">
-            <img src="assets/images/cds.gif" alt="">
-        </div>
-        <div class="logos">
+
+        <!-- <div class="logos">
             <img src="assets/images/ADOLPHOKORO.jpg" alt="">
-        </div>
+        </div> -->
         <div class="logos">
             <img src="assets/images/community-legal-service-logo-png-transparent.png" alt="">
         </div>
-        <div class="logos">
+        <!-- <div class="logos">
             <img src="assets/images/ukas-product.jpg" alt="">
-        </div>
+        </div> -->
     </div>
 </section>
 
@@ -399,6 +400,7 @@
             <mat-divider></mat-divider>
             <div class="links">
                 <a routerLink="terms_of_business">Terms and Condition</a>
+                <a matTooltip="Download Complaint Procedure" (click)="downlodProcedure()">Complaint Procedure</a>
                 <a routerLink="privacy">Privacy Statement</a>
                 <a href="">Cookie Policy</a>
                 <a target="blank" matTooltip="Download feedback form" matTooltipPosition="above" href="assets/images/graceland-Questionnaire.pdf">Feedback</a>
