--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,12 +4,36 @@ html, body {
      height: 100%;
      scroll-behavior: smooth;
 }
-body { 
-    margin: 0; 
+body {
+    margin: 0;
     padding: 0;
-    font-family: Raleway, "Helvetica Neue", sans-serif; 
+    font-family: Raleway, "Helvetica Neue", sans-serif;
     box-sizing: border-box;
-    // overflow: hidden;
+    overflow: overlay;
+    // overflow-y: hidden;
+}
+::-webkit-scrollbar-track {
+  // -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: transparent;
+}
+::-webkit-scrollbar {
+  width: 15px;
+  // height: 10px;
+  // padding: 0;
+  background-color: transparent;
+  // padding-left: 10px;
+}
+::-webkit-scrollbar-thumb {
+  background-color: transparent; //lighten(#fbc02d, 0);
+  border-radius: 5px;
+  background-color: rgba(#051d33, 0.5);
+  height: 10px;
+  width: 15px;
+
+}
+::-webkit-scrollbar-track {
+  background: transparent;
+  background-color: transparent;
 }
 .container{
     width: 95%;
