--- a/src/app/media-query/_desktop.scss
+++ b/src/app/media-query/_desktop.scss
@@ -577,6 +577,7 @@
     height: 600px;
     background-color: #034586;
     overflow: hidden;
+    color: #ffffff;
     iframe{
         width: 100%;
         height: 560px;
