--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -16,7 +16,7 @@
                         <h3>business and personal affairs</h3>
                     </div>
                 </div>
-                <button color="primary" (click)="getIntouch()" mat-raised-button>Get In Touch</button>
+                <button style="backgroundColor: #c2185b; color: #ffffff;" (click)="getIntouch()" mat-raised-button>Get In Touch</button>
             </div>
             <div class="float-image">
                 <img src="assets/images/top-photo.jpg" alt="">
@@ -286,7 +286,7 @@
     </div>
 </section>
 <section class="direction-section container-fluid" id="get-in-touch">
-        <mat-tab-group mat-align-tabs="center" animationDuration="1000ms" [selectedIndex]="selectedIndex">
+        <mat-tab-group  mat-align-tabs="center" animationDuration="1000ms" [selectedIndex]="selectedIndex">
             <mat-tab label="Lewisham Office On Google Map">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2486.127279347244!2d-0.0171022485017891!3d51.455819522194!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4876026c4b99b187%3A0x952030d81e4b1743!2sLewisham+High+St%2C+Lewisham%2C+London+SE13+6NL!5e0!3m2!1sen!2suk!4v1562588599500!5m2!1sen!2suk" width="100%" height="500" frameborder="0" style="border:0" allowfullscreen></iframe>
             </mat-tab>
