--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
     </span>
     <!-- <span class="space-bar"></span> -->
     <span (click)="showHours()" class="opHours">
-     <b>Open</b> <mat-icon>timer</mat-icon> <p class="our-time">Mon-Fri 08:00-18:00 Sat 10:00-16:00</p>
+     <b>Open</b> <mat-icon>timer</mat-icon> <p class="our-time">Mon-Fri 09:00-17:30 Sat 10:00-16:00</p>
     </span>
     <span class="space-bar"></span>
     <a href="#about" matRipple class="menu-item">
@@ -85,7 +85,7 @@
       <p>T/A Graceland Solicitors | Company Number 9516021</p>
       <p>Authorised & Regulated by SRA.</p>
       <p>SRA Reg 626100 & 627120</p>
-      <a matTooltip="Call the Developer on 07853292983" href="https://miscotech.co.uk" target="blank">Powered by MISCOTECH</a>
+      <a class="miscotech"  href="https://miscotech.co.uk" target="blank">Powered by MISCOTECH</a>
     </div>
 </div>
 
