--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -125,7 +125,9 @@ router-outlet{
             color: lighten(#034060, 30);
             line-height: 50px;
         }
-
+        a.miscotech{
+          font-size: 0.7rem;
+        }
     }
 }
 
