--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -274,11 +274,11 @@
                 </div>
                 <div class="empty-member"></div>
                 <div class="member">
-                    <img src="assets/images/lloyd.png" alt="">
+                    <!-- <img src="assets/images/lloyd.png" alt=""> -->
                     <div class="title">
-                        <h1>Lloyd McDonald</h1>
+                        <h1></h1>
                         <mat-divider></mat-divider>
-                        <p>Case Worker</p>
+                        <p></p>
                     </div>
                 </div>
             </div>
@@ -345,7 +345,7 @@
                 <h5>+44 20 8314 5771</h5>
             </div>
 
-            <h5>DX: 56605-Lewisham</h5>
+            <!-- <h5>DX: 33325-Lewisham</h5> -->
             <div class="email">
                 <mat-icon>email</mat-icon>
                 <p>admin@gracelandsolicitors.co.uk</p>
@@ -370,6 +370,7 @@
                 <mat-icon>mobile_friendly</mat-icon>
                 <h5>+44 796 1052 026</h5>
             </div>
+            <h5 style="margin-top: 20px">DX: 33325-Woolwich</h5>
             <!-- <h5><mat-icon>call_end</mat-icon> : +44  20 8836 9350</h5>
             <h5><mat-icon>file_copy</mat-icon> : +44 20 8836 9351</h5>
             <h5><mat-icon>mobile_friendly</mat-icon> : +44 796 1052 026</h5> -->
