--- a/src/app/media-query/_desktop.scss
+++ b/src/app/media-query/_desktop.scss
@@ -326,7 +326,7 @@
             align-content: space-between;
             .service{
                 flex: 1;
-                height: 300px;
+                min-height: 300px;
                 // background-color: antiquewhite;
                 text-align: center;
                 img{
@@ -678,6 +678,7 @@
         display: flex;
         flex-direction: row;
         align-content: space-between;
+        gap: 30px;
         .lewisham, .woolwich, .social-media, .terms-privacy{
             flex: 1;
             mat-divider{
