--- a/src/app/media-query/_laptop.scss
+++ b/src/app/media-query/_laptop.scss
@@ -347,7 +347,7 @@
             align-content: space-between;
             .service{
                 flex: 1;
-                height: 300px;
+                min-height: 300px;
                 // background-color: antiquewhite;
                 text-align: center;
                 img{
@@ -908,6 +908,7 @@
         display: flex;
         flex-direction: row;
         align-content: space-between;
+        gap: 30px;
         .lewisham, .woolwich, .social-media, .terms-privacy{
             flex: 1;
             padding-left: 0px;
