--- a/src/app/media-query/_mobile.scss
+++ b/src/app/media-query/_mobile.scss
@@ -348,7 +348,7 @@ p{
             align-content: space-between;
             .service{
                 flex: 1;
-                height: 300px;
+                min-height: 300px;
                 // background-color: antiquewhite;
                 text-align: center;
                 img{
@@ -444,12 +444,23 @@ p{
 
                 .service1{
                     // margin-bottom: 30px;
+                    // margin-bottom: 30px;
+                    h1{
+                      margin: 0;
+                    }
+                    h3{
+                      color: #ffffff;
+                      padding: 0;
+                      margin: 0;
+                      font-size: 1.2rem;
+                      padding-left: 10px;
+                    }
                 }
                 .service1, .service2{
                     background-color: #034F81;
                     // padding-bottom: 20px;
                     overflow: hidden;
-                    height: 400px;
+                    min-height: 400px;
                     // transition: .5s;
                     // &:hover{
                     //     background-color: #c2185b;
@@ -722,6 +733,7 @@ p{
         display: flex;
         flex-direction: column;
         align-content: space-between;
+        gap: 20px;
         .lewisham, .woolwich, .social-media, .terms-privacy{
             flex: 1;
             margin-bottom: 40px;
@@ -806,7 +818,7 @@ p{
                 }
                 a:nth-child(3){
                     // display: none;
-                    text-decoration: line-through;
+                    // text-decoration: line-through;
                     opacity: 0.8;
                 }
             }
