--- a/src/app/privacy/privacy.component.scss
+++ b/src/app/privacy/privacy.component.scss
@@ -59,6 +59,9 @@
 @media only screen and (min-width: 770px) {
 
     .privacy{
+      .privacy-body{
+        width: 75%;
+      }
         .terms-header{
             height: 300px;
             background-color: darken(#034060, 2);
@@ -90,5 +93,13 @@
         }
     }
     // @import 'media-query/large-desktop';
-    
+
+}
+
+@media only screen and (min-width: 1600px) {
+  .privacy{
+    .privacy-body{
+      width: 65%;
+    }
+  }
 }
