--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,6 +12,15 @@ body {
     overflow: overlay;
     // overflow-y: hidden;
 }
+.mat-dialog-container{
+  background-color: #051d33;
+}
+@media only screen and (min-width: 687px){
+  .mat-dialog-container{
+    background-color: #051d33;
+    width: 600px !important;
+  }
+}
 ::-webkit-scrollbar-track {
   // -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   background-color: transparent;
