--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -345,7 +345,7 @@
                 <mat-icon>file_copy</mat-icon>
                 <h5>+44 20 8314 5771</h5>
             </div>
-
+            <h5 style="margin-top: 20px">DX: 33325</h5>
             <!-- <h5>DX: 33325-Lewisham</h5> -->
             <div class="email">
                 <mat-icon>email</mat-icon>
@@ -371,7 +371,7 @@
                 <mat-icon>mobile_friendly</mat-icon>
                 <h5>+44 796 1052 026</h5>
             </div>
-            <h5 style="margin-top: 20px">DX: 33325-Woolwich</h5>
+            <!-- <h5 style="margin-top: 20px">DX: 33325</h5> -->
             <!-- <h5><mat-icon>call_end</mat-icon> : +44  20 8836 9350</h5>
             <h5><mat-icon>file_copy</mat-icon> : +44 20 8836 9351</h5>
             <h5><mat-icon>mobile_friendly</mat-icon> : +44 796 1052 026</h5> -->
